--- a/WebAppEs/Views/Report/Index.cshtml
+++ b/WebAppEs/Views/Report/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@model WebAppEs.ViewModel.Report.ReportViewModel
 @{ ViewData["Title"] = "Report"; }
 
+<div class="loading">
+    Loading&#8230;
+</div>
 
 <div class="x_panel">
     <a style="float:right" class="btn btn-info" asp-action="PrintDetails"> <i class="fa fa-print pr-2"></i>Faults Details</a>
