--- a/WebAppEs/Views/Report/Index.cshtml
+++ b/WebAppEs/Views/Report/Index.cshtml
@@ -67,6 +67,7 @@
                         <option value="8th">8th</option>
                         <option value="9th">9th</option>
                         <option value="10th">10th</option>
+                        <option value="Closing">Closing</option>
                     </select>
                 </div>
                 <div class="col-md-4">
