--- a/WebAppEs/Views/Admin/EditRolePermission.cshtml
+++ b/WebAppEs/Views/Admin/EditRolePermission.cshtml
@@ -22,17 +22,20 @@
                                 <input type="hidden" asp-for="@Model[i].Name" />
                             </li>
 
-                        }
-                        else
-                        {
-                            <li style="margin-left:20px">
-                                <input type="checkbox" asp-for="@Model[i].Permitted" />
-                                <label style="margin-left:10px;" asp-for="@Model[i].Permitted">@Model[i].Name</label>
-                                <input type="hidden" asp-for="@Model[i].Id" />
-                                <input type="hidden" asp-for="@Model[i].Name" />
-                            </li>
-                        }
+                            for (int j = 0; j < Model.Count; j++)
+                            {
+                                if (Model[i].Id == Model[j].ParentMenuId)
+                                {
+                                    <li style="margin-left:20px">
+                                        <input type="checkbox" asp-for="@Model[j].Permitted" />
+                                        <label style="margin-left:10px;" asp-for="@Model[j].Permitted">@Model[j].Name</label>
+                                        <input type="hidden" asp-for="@Model[j].Id" />
+                                        <input type="hidden" asp-for="@Model[j].Name" />
+                                    </li>
+                                }
 
+                            }
+                        }
                     }
                 </ul>
 			</div>
