--- a/WebAppEs/Views/ProductModel/CreateModel.cshtml
+++ b/WebAppEs/Views/ProductModel/CreateModel.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebAppEs.ViewModel.PartsModel.PartsModelViewModel
+﻿@model WebAppEs.ViewModel.PartsModel.PartsModelViewModel2
 @{
     ViewData["Title"] = "Create Model";
 }
@@ -20,12 +20,18 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <label asp-for="Supplier" class="control-label"></label>
-                        <input asp-for="Supplier" class="form-control" />
-                        <span asp-validation-for="Supplier" class="text-danger"></span>
+                        <select asp-for="SupplierId" id="ddlSupplier" class="form-control">
+                            <option value="@Model.SupplierId">--Select Supplier--</option>
+                            @foreach (var item in Model.supplier)
+                            {
+                                <option value="@item.Id">@item.SupplierName</option>
+                            }
+                        </select>
+                        <span asp-validation-for="SupplierId" class="text-danger"></span>
                     </div>
                 </div>
             </div>
-            
+
             <div class="form-group">
                 @if (@Model.IsUpdate == "Update")
                 {
@@ -43,3 +49,11 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+@section scripts{
+    <script>
+        $(document).ready(function () {
+            $('#ddlSupplier').select2({});
+        });
+    </script>
+}
