--- a/WebAppEs/Views/Report/Index.cshtml
+++ b/WebAppEs/Views/Report/Index.cshtml
@@ -43,17 +43,17 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 ">
+                <div class="col-md-3 ">
                     <label>Model</label>
                     <select asp-for="PartsModelID" id="ddlModel" class="form-control">
                         <option value="@Model.PartsModelID">--Select Model--</option>
                         @foreach (var item in Model.PartsModelViewModel)
                         {
-            <option value="@item.ID">@item.Name</option>
-}
+                            <option value="@item.ID">@item.Name</option>
+                        }
                     </select>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <label>Lot No.</label>
                     <select asp-for="LotNo" id="ddlLot" class="form-control">
                         <option value="@Model.LotNo">--Select Lot--</option>
@@ -70,14 +70,24 @@
                         <option value="Closing">Closing</option>
                     </select>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <label>Employee</label>
                     <select asp-for="EmployeeID" id="ddlEmployee" class="form-control">
                         <option value="@Model.EmployeeID">--Select Employee--</option>
                         @foreach (var item in Model.EmployeeListVM)
                         {
-            <option value="@item.EmployeeID">@item.EmployeeName</option>
-}
+                            <option value="@item.EmployeeID">@item.EmployeeName</option>
+                        }
+                    </select>
+                </div>
+                <div class="col-md-3">
+                    <label>Supplier</label>
+                    <select asp-for="SupplierID" id="ddlSupplier" class="form-control">
+                        <option value="@Model.SupplierID">--Select Supplier--</option>
+                        @foreach (var item in Model.SupplierList)
+                        {
+                            <option value="@item.Id">@item.SupplierName</option>
+                        }
                     </select>
                 </div>
             </div>
@@ -113,10 +123,9 @@
 
 @section scripts{
     <script>
+        var PreviewData = [];
         $(document).ready(function () {
-            
-            var PreviewData = [];
-            $('#ddlModel, #ddlEmployee').select2({
+            $('#ddlModel, #ddlEmployee, #ddlSupplier').select2({
             });
             $("#btnPreview").click(function () {
                 displayBusyIndicator();
@@ -138,6 +147,7 @@
                 PartsModelID: $('#ddlModel').val().trim(),
                 LotNo: $('#ddlLot').val().trim(),
                 EmployeeID: $('#ddlEmployee').val().trim(),
+                SupplierID: $('#ddlSupplier').val().trim(),
                 //IsQty = $("#withQty").is(':checked'),
             }
             $.ajax({
@@ -147,6 +157,7 @@
                         dataType: "JSON",
                         contentType: "application/json",
                         success: function (result) {
+                            console.log(result);
                             if (result != null) {
                                 PreviewData = [];
                                 PreviewData = result;
